[gd_scene load_steps=14 format=3 uid="uid://bjjutapwvygej"]

[ext_resource type="Script" path="res://main/player/player/characters/character.gd" id="1_yqtbi"]
[ext_resource type="Script" path="res://main/player/player/scripts/movement.gd" id="2_qipv8"]
[ext_resource type="Script" path="res://main/player/player/scripts/character_stats.gd" id="3_xu6vl"]
[ext_resource type="PackedScene" uid="uid://cfqaj6lx1m8av" path="res://main/player/player/scripts/hurtbox/hurtbox.tscn" id="4_e2ri2"]
[ext_resource type="Shader" path="res://assets/resources/shader/flash.gdshader" id="5_to5rc"]
[ext_resource type="Texture2D" uid="uid://cnrphe8k7nsk6" path="res://assets/characters/canix/walk/canix-walking-se-01.png" id="6_xmjgu"]
[ext_resource type="Script" path="res://main/player/player/scripts/sprite.gd" id="7_guo8w"]
[ext_resource type="Script" path="res://main/player/player/scripts/detect_enemy_or_ally.gd" id="8_yia6t"]
[ext_resource type="PackedScene" uid="uid://bs6ncy56q2n34" path="res://main/player/player_gui/player_gui.tscn" id="9_ij4hd"]
[ext_resource type="Script" path="res://main/player/player/scripts/line_of_sight.gd" id="10_66bfv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5jxgq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mqk7h"]
shader = ExtResource("5_to5rc")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n855i"]
radius = 455.215

[node name="canix" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_yqtbi")

[node name="movement" type="Node" parent="."]
script = ExtResource("2_qipv8")

[node name="character_stats" type="Node" parent="."]
script = ExtResource("3_xu6vl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5jxgq")

[node name="sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_mqk7h")
position = Vector2(0, -61)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_xmjgu")
script = ExtResource("7_guo8w")

[node name="Timer" type="Timer" parent="sprite"]
wait_time = 0.1
autostart = true

[node name="detect_enemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("8_yia6t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect_enemy"]
shape = SubResource("CircleShape2D_n855i")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="player_gui" parent="Camera2D" instance=ExtResource("9_ij4hd")]
visible = false

[node name="line_of_sight" type="Node2D" parent="."]
position = Vector2(-1.90707e-07, -16)
script = ExtResource("10_66bfv")

[node name="Marker2D" type="Marker2D" parent="line_of_sight"]
position = Vector2(35, 0)

[node name="hurtbox" parent="." instance=ExtResource("4_e2ri2")]

[connection signal="timeout" from="sprite/Timer" to="sprite" method="_on_timer_timeout"]
